[gd_scene load_steps=11 format=3 uid="uid://deuv5ay7440ah"]

[ext_resource type="Script" path="res://scenes/maps.gd" id="1_26c4c"]
[ext_resource type="Script" path="res://scenes/PlayerSpawner.gd" id="1_mbtdp"]
[ext_resource type="PackedScene" uid="uid://rigcwmg57j2d" path="res://scenes/map_1.tscn" id="2_aec3i"]
[ext_resource type="PackedScene" uid="uid://btki6gx4eneyb" path="res://scenes/gun_box.tscn" id="4_fkrp6"]
[ext_resource type="Script" path="res://scenes/gun_box.gd" id="5_a45gf"]
[ext_resource type="PackedScene" uid="uid://dokq2dxwaavcg" path="res://scenes/Player1.tscn" id="6_dyrc4"]
[ext_resource type="PackedScene" uid="uid://bx8bi7a0c7fih" path="res://scenes/guns.tscn" id="7_j5a0p"]
[ext_resource type="PackedScene" uid="uid://b5lq3k1mea4rh" path="res://scenes/Player2.tscn" id="8_rq4or"]
[ext_resource type="Script" path="res://scenes/Label.gd" id="11_ihox3"]

[sub_resource type="LabelSettings" id="LabelSettings_1w4at"]
font_size = 23

[node name="maps" type="Node2D"]
script = ExtResource("1_26c4c")

[node name="map1" parent="." instance=ExtResource("2_aec3i")]

[node name="PlayerSpawner" type="Node2D" parent="."]
script = ExtResource("1_mbtdp")
player1_tscn = ExtResource("6_dyrc4")

[node name="GunSpawner" type="Node2D" parent="."]

[node name="Label" type="Label" parent="."]
texture_filter = 1
offset_left = 22.0
offset_top = 9.0
offset_right = 297.0
offset_bottom = 79.0
text = "P1 Lives: "
label_settings = SubResource("LabelSettings_1w4at")
script = ExtResource("11_ihox3")

[node name="GunBox" parent="." instance=ExtResource("4_fkrp6")]
script = ExtResource("5_a45gf")

[node name="Player1" parent="." instance=ExtResource("6_dyrc4")]
texture_filter = 1
position = Vector2(577, -59)

[node name="GunSniper" parent="." instance=ExtResource("7_j5a0p")]

[node name="Player2" parent="." instance=ExtResource("8_rq4or")]
position = Vector2(504, 169)

[connection signal="body_entered" from="GunBox" to="GunBox" method="_on_body_entered"]
[connection signal="body_entered" from="GunBox" to="GunSniper" method="_on_gun_box_body_entered"]
